syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 266
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message PersonalSceneJumpReq {
	uint32 point_id = 2;
}
